--- a/src/main/resources/templates/new-product.html
+++ b/src/main/resources/templates/new-product.html
@@ -6,26 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
   <title>Grids & Circles</title>
 </head>
 <body class="container-fluid">
 <h1>Grids & Circles</h1>
 <h2>Production Management</h2>
-<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  <a th:href="@{/new-product}" class="btn btn-primary me-md-2" type="button">Add Product</a>
-</div>
 <form th:action="@{/products}" method="post">
   <div class="mb-3">
     <label for="productName" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name" name="productName">
+    <input type="text" class="form-control" id="productName" name="productName">
   </div>
   <div class="mb-3">
-    <label for="cartegory" class="form-label">Cartegory</label>
-    <select id="cartegory" name="category" class="form-select">
-      <option selected>Open this select</option>
-      <option value="COFFEE_BEAN_PACKAGE">Coffee Bean Package</option>
+    <label for="category" class="form-label">Category</label>
+    <select id="category" name="category" class="form-select">
+      <option selected>Open this select menu</option>
+      <option value="COFFEE_BEAN_PACKAGE">COFFEE BEAN PACKAGE</option>
     </select>
   </div>
   <div class="mb-3">
@@ -38,6 +36,5 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-</table>
 </body>
 </html>
